--- a/less/global.less
+++ b/less/global.less
@@ -12,12 +12,14 @@ html, body {
 
 body {
     background-color: @mainblue;
+    margin: 0;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    width: 800px;
+    width: 100%;
+    max-width: 800px;
     margin: 0 auto;
   }
 
