--- a/less/variables.less
+++ b/less/variables.less
@@ -1,3 +1,8 @@
 @mainblue: #2d4059;
 @btngradient: linear-gradient(to right, #febf10, #f696bf);
 @servicestxt: #fedc7c;
+
+// Mobile variable
+
+@mobile: (max-width: 500px);
+@tablet: (max-width: 800px);
